--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl_phone_number_input: ^0.7.4
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +59,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - Assets/bg.png
+    - Assets/bgcolor.png
+    - Assets/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -67,7 +74,6 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
