--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   firebase_auth: ^5.6.2
   intl: ^0.20.2
   graphview: ^1.0.0
-
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  permission_handler: ^11.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
