--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   geolocator: ^10.1.0
   permission_handler: ^11.3.0
   http: ^0.13.6
+  flutter_spinkit: ^5.2.0
+  animated_text_kit: ^4.2.2
+  provider: ^6.1.1
+  flutter_markdown: ^0.6.17
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
