--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,10 @@ dependencies:
   animated_text_kit: ^4.2.2
   provider: ^6.1.1
   flutter_markdown: ^0.6.17
-
-
+  geocoding: ^2.1.0
+  url_launcher: ^6.1.14
+  image_picker: ^0.8.7+4
+  firebase_storage: 12.4.9
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -82,6 +84,8 @@ flutter:
     - Assets/bgcolor.png
     - Assets/logo.png
     - lib/assets/disaster_data.json
+    - lib/assets/weather.json
+    - lib/data/hotlines.json
     - icon.png
 
 flutter_launcher_icons:
