Improving the contents and feature abd finishing building on preparedness featured

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - lib/assets/disaster_data.json
     - lib/assets/weather.json
     - lib/data/hotlines.json
+    - lib/data/prepare.json
     - icon.png
 
 flutter_launcher_icons:
